feat: localize exploratory session statuses, add back-to-list navigation, and optimize session filtering and timer logic.